fix overflow

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    overflow: auto;
+}
+
 nav {
     display: grid;
     grid-template-columns: 10% 1fr 1fr 10%;
@@ -8,10 +12,10 @@ nav {
 }
 
 body{ 
-    overflow-x :hidden; 
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    min-width: 1300px;
 } 
 
 #logo {
@@ -85,7 +89,7 @@ body{
   
   .dropdown {
     position: relative;
-    left: 100%;
+    left: 80%;
     display:inline-block;
   }
   
